--- a/style1.css
+++ b/style1.css
@@ -12,7 +12,18 @@
     width: auto;
     height: 300px;
     background: white;
+    margin-left: 7px;
+    margin-right: 7px;
+    border-radius: 25px;
+    padding: :20px;
 }
+.container-fluid{
+     border-radius: 25px;
+    padding: :20px;
+    border-bottom-color:gainsboro;
+}
+    
+
 
 .second-text{
     color: var(--second-text-color);
@@ -60,6 +71,7 @@
 
 #menu-toggle{
     cursor: pointer;
+    color:black;
 }
 
 .list-group-item{
@@ -73,6 +85,7 @@
     font-weight: bold;
     border: none;
 }
+
 
 @media(min-width: 768px){
     #sidebar-wrapper{
